--- a/fly.toml
+++ b/fly.toml
@@ -1,4 +1,4 @@
-app = "indigo-bot"
+app = "indigo-discord-bot-2024"
 primary_region = "lax"
 
 [build]
@@ -7,13 +7,8 @@ primary_region = "lax"
 [env]
   PORT = "8080"
 
-[http_service]
-  internal_port = 8080
-  force_https = true
-  auto_stop_machines = false
-  auto_start_machines = true
-  min_machines_running = 1
-  processes = ["app"]
+[processes]
+  app = "python bot.py"
 
 [[vm]]
   cpu_kind = "shared"
